# dotfilesmanager

./: .gitignore  LICENSE  README.md  README_zh.md  dfm.py  dfm_template.yaml  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
doc/: dotfiles_partial_encryption_proposal.md  技术实现.md
dotfilesmanager/: __init__.py  _types.py  cli.py  config.py  encryption.py  operations.py  transaction.py  windows.py
src/: dfm
tests/: debug_run.py  test_cli.py  test_config.py  test_direct_cli.py  test_encryption.py  test_operations.py  test_transaction.py  test_transaction_cli.py  test_windows.py
