[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dotfilesmanager"
version = "1.16.4"
description = "dotfile管理工具，支持多平台"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "xyz1001", email = "zgzf1001@gmail.com" },
]
keywords = ["python", "dotfiles"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click>=8.1.8,<8.2",
    "questionary==2.1.0",
    "prompt-toolkit>=3.0.37,<3.0.52",
    "platformdirs==4.3.6",
    "PyYAML>=6.0",
    "cryptography>=46.0.6,<47",
]

[project.urls]
Repository = "https://github.com/xyz1001/dotfilesmanager"

[project.scripts]
dfm = "dotfilesmanager.cli:main"

[tool.setuptools]
packages = ["dotfilesmanager"]
py-modules = ["dfm"]

[project.optional-dependencies]
dev = ["build", "twine", "ruff", "pytest"]
typecheck = [
    "mypy>=1.14,<1.15",
    "types-PyYAML>=6.0.12.20241221,<6.0.12.20250326",
]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
files = ["dotfilesmanager/_types.py", "dotfilesmanager/config.py", "dotfilesmanager/operations.py", "dotfilesmanager/windows.py"]
